--- a/architecture.html
+++ b/architecture.html
@@ -53,6 +53,7 @@
                 <a class="dropdown-item" href="about.html">TerraMA2</a>
                 <a class="dropdown-item" href="team.html">Equipe</a>
                 <a class="dropdown-item" href="architecture.html">Arquitetura</a>
+                <a class="dropdown-item" href="contact.html">Contato</a>
               </div>
             </li>
             <li class="nav-item dropdown">
