--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 
+  <!-- lightbox -->
+  <link rel="stylesheet" href="js/bootstrap-lightbox.css">
+  <link rel="stylesheet" href="js/bootstrap-lightbox.min.css">
+
 </head>
 
 <body>
@@ -71,7 +75,7 @@
               <a class="nav-link" href="services.html">Download</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Documentação</a>
+              <a class="nav-link" href="documentation.html">Documentação</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Cursos</a>
@@ -353,5 +357,10 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/popper/popper.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- lighbox -->
+    <script src="js/bootstrap-lightbox.js"></script>
+    <script src="js/bootstrap-lightbox.min.js"></script>
+
   </body>
 </html>
