--- a/index.html
+++ b/index.html
@@ -10,15 +10,11 @@
 
   <title>TerraMA²</title>
 
-  <!-- Bootstrap core CSS -->
+  <!-- Bootstrap core CSS ====================================== -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom styles for this template -->
+  <!-- Custom styles for this template ========================= -->
   <link href="css/modern-business.css" rel="stylesheet">
-
-  <!-- lightbox -->
-  <link rel="stylesheet" href="js/bootstrap-lightbox.css">
-  <link rel="stylesheet" href="js/bootstrap-lightbox.min.css">
 
 </head>
 
@@ -72,7 +68,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Download</a>
+              <a class="nav-link" href="download.html">Download</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="documentation.html">Documentação</a>
@@ -134,34 +130,34 @@
         <div class="carousel-inner" role="listbox">
           <!-- Slide One - Set the background image for this slide in the line below --> 
           <div class="carousel-item active"> <!-- url('http://placehold.it/1900x1080') -->
-            <img src="images/wildfire.png">
-            <!-- <div class="carousel-caption d-none d-md-block">
-              <h3>First Slide</h3>
-              <p>This is a description for the first slide.</p>
-            </div> -->
+            <img src="images/wildfire-1.png">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Queimadas</h3>
+              <!-- <p>This is a description for the first slide.</p> -->
+            </div>
           </div>
           <!-- Slide Two - Set the background image for this slide in the line below -->
           <div class="carousel-item"> <!-- style="background-image: url('http://placehold.it/1900x1080')" -->
-            <img src="images/storm.png">
+            <img src="images/storm-1.png">
             <div class="carousel-caption d-none d-md-block">
-              <!-- <h3>Second Slide</h3>
-              <p>This is a description for the second slide.</p> -->
+              <h3>Raios</h3>
+             <!--  <p>This is a description for the second slide.</p> -->
             </div>
           </div>
           <!-- Slide Three - Set the background image for this slide in the line below -->
           <div class="carousel-item"> <!--style="background-image: url('http://placehold.it/1900x1080')"> -->
-            <img src="images/inundation.png">
+            <img src="images/inundation-1.png">
             <div class="carousel-caption d-none d-md-block">
-              <!-- <h3>Third Slide</h3>
-              <p>This is a description for the third slide.</p> -->
+              <h3>Inundações</h3>
+              <!-- <p>This is a description for the third slide.</p> -->
             </div>
           </div>
           <!-- Slide fours - Set the background image for this slide in the line below -->
           <div class="carousel-item"><!--style="background-image: url('http://placehold.it/1900x1080')">-->
             <img src="images/modelo_terrama2_v4.jpg.png">
             <div class="carousel-caption d-none d-md-block">
-             <!--  <h3>Third Slide</h3>
-             <p>This is a description for the third slide.</p> -->
+             <!--  <h3>Third Slide</h3> -->
+             <!-- <p>This is a description for the third slide.</p>-->
            </div>
          </div>
        </div>
