--- a/documentation.html
+++ b/documentation.html
@@ -56,7 +56,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Download</a>
+              <a class="nav-link" href="download.html">Download</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="documentation.html">Documentação</a>
