updating new files

--- a/download.html
+++ b/download.html
@@ -9,6 +9,7 @@
     <meta name="author" content="">
 
     <title>TerraMA² | Download</title>
+    <link href="images/logo-terraMa2.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,11 +29,11 @@
         <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
 
         <!-- Logo -->
-        <a href="index.html"><img src="C:/Users/Fabiana/Desktop/plone/pagina no plone/logo-terraMa2.png" width="60" height="50"></a>
+        <a href="index.html" title="Home"><img src="C:/Users/Fabiana/Desktop/plone/pagina no plone/logo-terraMa2.png" width="60" height="50"></a>
         
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> -->
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
