--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <meta name="author" content="">
 
   <title>TerraMA²</title>
+  <link href="images/logo-terraMa2.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
 
   <!-- Bootstrap core CSS ====================================== -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template ========================= -->
   <link href="css/modern-business.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -40,11 +40,11 @@
         <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
 
         <!-- Logo -->
-        <a href="index.html"><img src="C:/Users/Fabiana/Desktop/plone/pagina no plone/logo-terraMa2.png" width="60" height="50"></a>
+        <a href="index.html" title="Home"><img src="images/logo-terraMa2.png" width="60" height="50"></a>
         
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> -->
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
@@ -74,8 +74,9 @@
               <a class="nav-link" href="documentation.html">Documentação</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Cursos</a>
+              <a class="nav-link" href="#" data-toggle="popover" data-placement="right" data-content="Em breve !">Cursos</a>
             </li>
+
             <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Portfolio
@@ -179,9 +180,7 @@
 
   <div class="container">
 
-    <h1 class="my-4">Plataforma de monitoramento, análise e alerta a extremos ambientais.</h1>
-    <br>
-
+    <h1 class="my-4">Plataforma de monitoramento, análise e alerta a extremos ambientais.</h1><br>
 
     <!-- Portfolio Section -->
 
@@ -353,10 +352,5 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/popper/popper.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- lighbox -->
-    <script src="js/bootstrap-lightbox.js"></script>
-    <script src="js/bootstrap-lightbox.min.js"></script>
-
   </body>
 </html>
