--- a/team.html
+++ b/team.html
@@ -9,6 +9,7 @@
     <meta name="author" content="">
 
     <title>TerraMA² | Equipe</title>
+    <link href="images/logo-terraMa2.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -32,11 +33,11 @@
         <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
 
         <!-- Logo -->
-        <a href="index.html"><img src="C:/Users/Fabiana/Desktop/plone/pagina no plone/logo-terraMa2.png" width="60" height="50"></a>
+        <a href="index.html" title="Home"><img src="C:/Users/Fabiana/Desktop/plone/pagina no plone/logo-terraMa2.png" width="60" height="50"></a>
         
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> -->
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
@@ -60,10 +61,10 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Download</a>
+              <a class="nav-link" href="download.html">Download</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Documentação</a>
+              <a class="nav-link" href="documentation.html">Documentação</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Cursos</a>
@@ -366,8 +367,6 @@
         </div>
       </div>
 
-
-
       <!-- Our Customers -->
       <!-- <h2>Our Customers</h2>
       <div class="row">
@@ -409,5 +408,4 @@
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
   </body>
-
 </html>
