--- a/download.html
+++ b/download.html
@@ -123,7 +123,7 @@
 
       <h4>Download TerraMA² - Release 4 - Release Candidate 1</h4><br>
       
-      <h5>Escolha sua opção abaixo: Manual de Instalação</h5>
+      <h5>Escolha sua opção abaixo: <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:manuais:manual_instalacao_terrama2_rc1.pdf">Manual de Instalação</a></h5>
       
       <p><b><a href="#um">1</a></b> - Instalação Windows (em desenvolvimento)</p>
       <p><b><a href="#dois">2</a></b> - Instalação Linux Ubuntu </p>
