--- a/index.html
+++ b/index.html
@@ -302,10 +302,10 @@
         </div>
 
         <div class="col-md-6">
-          <h3 class="my-3"> sDescription</h3>
+          <h3 class="my-3">Description</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
           
-          <a class="btn btn-primary" href="#">View 
+          <a class="btn btn-primary" href="http://www.dpi.inpe.br/terrama2/doku.php?id=novidades" target="_blank">Saiba mais 
             <span class="glyphicon glyphicon-chevron-right"></span>
           </a>
         </div>
@@ -315,10 +315,10 @@
       <div class="row">
 
         <div class="col-md-6">
-          <h3 class="my-3"> Description</h3>
+          <h3 class="my-3">Description</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
           
-          <a class="btn btn-primary" href="#">View 
+          <a class="btn btn-primary" href="#">Saiba mais 
             <span class="glyphicon glyphicon-chevron-right"></span>
           </a>
         </div>
