--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
 
     <!-- GoV -->
     <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
+    <!-- GoV -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
