--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <meta property="creator.productor" content="http://estruturaorganizacional.dados.gov.br/id/unidade-organizacional/NUMERO"> 
 
   <title>TerraMA²</title>
   <link href="images/logo-terraMa2.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
@@ -20,17 +21,14 @@
 
 <body>
 <!-- Gov -->
-    
-    <!-- <div id="barra-brasil" style="background:#7F7F7F; height: 20px; padding:0 0 0 10px;display:block;"> 
+    <div id="barra-brasil" style="background:#7F7F7F; height: 20px; padding:0 0 0 10px;display:block;"> 
       <ul id="menu-barra-temp" style="list-style:none;">
         <li style="display:inline; float:left;padding-right:10px; margin-right:10px; border-right:1px solid #EDEDED">
           <a href="http://brasil.gov.br" style="font-family:sans,sans-serif; text-decoration:none; color:white;">Portal do Governo Brasileiro</a></li> 
         <li>
           <a style="font-family:sans,sans-serif; text-decoration:none; color:white;" href="http://epwg.governoeletronico.gov.br/barra/atualize.html">Atualize sua Barra de Governo</a></li>
       </ul>
-    </div> -->
-
-<!-- End Gov -->
+    </div>
 
 <!-- Navigation -->
 
@@ -116,7 +114,7 @@
       </div>
     </nav>
 
-<!-- End Navigation -->
+<!-- /.Navigation -->
 
 <!-- Carousel -->
     
@@ -174,7 +172,7 @@
     </div>
   </header>
 
-<!-- End Carousel -->
+<!-- /.Carousel -->
 
 <!-- Page Content -->
 
@@ -380,6 +378,7 @@
         <p class="m-0 text-center text-black">Copyright &copy; TerraMA² 2017</p>
       </div>
     </footer>
+  <!-- /.Footer -->
 
     <!-- GoV -->
     <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
