--- a/documentation.html
+++ b/documentation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
   <head>
 
@@ -123,8 +123,8 @@
 
       <h4>Documentos do Usuário</h4>
       <p>Manual de Instalação do TerraMA² <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:manuais:manual_instalacao_terrama2_rc1.pdf">manual_instalacao_terrama2_rc1.pdf</a><br>
-      Manual de Usuário <a href="">mmm</a><br>
-      Apresentação do Sistema <a href="">mmmm</a>
+      Manual de Usuário <a href=""></a><br>
+      Apresentação do Sistema <a href=""></a>
       </p>
       <hr>
       <h4>Publicações</h4>
