--- a/architecture.html
+++ b/architecture.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
   <head>
 
@@ -72,7 +72,7 @@
               <a class="nav-link" href="documentation.html">Documentação</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Cursos</a>
+              <a class="nav-link" href="#" title="Em Breve!">Cursos</a>
             </li>
             <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -112,8 +112,9 @@
         </div>
       </div>
     </nav>
+  <!-- ./Navigation -->
 
-    <!-- Page Content -->
+  <!-- Page Content -->
     <div class="container">
 
       <!-- Page Heading/Breadcrumbs -->
@@ -134,7 +135,7 @@
           <img class="img-fluid rounded mb-4" src="http://placehold.it/750x450" alt="">
         </div> -->
         <div class="col-lg-12"> 
-          <img src="images/modelo_terrama2_v4_portugues.png"> 
+          <img class="img-fluid rounded" src="images/modelo_terrama2_v4_portugues.png"> 
         </div>
 
         <div class="col-lg-12">
@@ -142,8 +143,7 @@
           <p>Cada serviço realiza um conjunto de tarefas que se relacionam entre si. Os serviços podem ser executados localmente ou remotamente, sendo eles:</p>
           
           <ul>
-            <li>Serviço de Coleta : Responsável pela coleta dos dados ambientais disponibilizados por servidores de dados, buscando periodicamente dados ambientais. Caso sejam encontrados, tais dados são baixados e incluídos na base de dados do projeto. Os tipos de servidores de dados e sua localização são definidos através da interface web do módulo de administração.
-            </li>
+            <li>Serviço de Coleta : Responsável pela coleta dos dados ambientais disponibilizados por servidores de dados, buscando periodicamente dados ambientais. Caso sejam encontrados, tais dados são baixados e incluídos na base de dados do projeto. Os tipos de servidores de dados e sua localização são definidos através da interface web do módulo de administração.</li>
             <li>Serviço de Interpolação : Responsável pela interpolação dos dados de PCD ou ocorrências coletados, produzindo novos dados matriciais dinamicamente gerados.</li>
             <li>Serviço de Análise : Responsável pelo cruzamento entre dos dados ambientais (hidrometeorológicos) e dados estáticos. Uma análise configurada produzirá novos dados dinâmicos, seja geográficos ou tabulares. Os modelos de análises são desenvolvidos com a linguagem de programação Phyton mais operadores geográficos da TerraLib.</li>
             <li>Serviço de Visualização : Responsável por publicar dados estáticos, dinâmicos ou resultados de análises no módulo de monitoramento. O serviço utiliza o Geoserver para criar as camadas a serem publidadas, juntamente com o estilo a ser apresentado.</li>
@@ -235,7 +235,6 @@
       <div class="container">
         <p class="m-0 text-center text-black">Copyright &copy; TerraMA² 2017</p>
       </div>
-      <!-- /.container -->
     </footer>
 
     <!-- Bootstrap core JavaScript -->
