--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
               <a class="nav-link" href="documentation.html">Documentação</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Cursos</a>
+              <a class="nav-link" href="#" title="Em Breve!">Cursos</a>
             </li>
             <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -104,7 +104,7 @@
       </div>
     </nav>
 
-<!-- End Navigation -->
+  <!-- ./Navigation -->
 
     <!-- Page Content -->
     <div class="container">
@@ -194,7 +194,6 @@
       <div class="container">
         <p class="m-0 text-center text-black">Copyright &copy; TerraMA² 2017</p>
       </div>
-      <!-- /.container -->
     </footer>
 
     <!-- Bootstrap core JavaScript -->
