--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <a class="nav-link" href="documentation.html">Documentação</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" title="Em Breve!" data-toggle="">Cursos</a>
+              <a class="nav-link" href="#" title="Em Breve!">Cursos</a>
             </li>
 
             <!-- <li class="nav-item dropdown">
