adjusting image to slide

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           </div>
           <!-- Slide fours - Set the background image for this slide in the line below -->
           <div class="carousel-item"><!--style="background-image: url('http://placehold.it/1900x1080')">-->
-            <img src="images/modelo_terrama2_v4.jpg.png">
+            <img src="images/terrama2_v4.png">
             <div class="carousel-caption d-none d-md-block">
              <!--  <h3>Third Slide</h3> -->
              <!-- <p>This is a description for the third slide.</p>-->
