--- a/new-one.html
+++ b/new-one.html
@@ -34,20 +34,20 @@
 
   <body>
 
-<!-- Gov -->
-   <!--  <div id="barra-brasil" style="background:#7F7F7F; height: 20px; padding:0 0 0 10px;display:block;"> 
-      <ul id="menu-barra-temp" style="list-style:none;">
-        <li style="display:inline; float:left;padding-right:10px; margin-right:10px; border-right:1px solid #EDEDED">
-          <a href="http://brasil.gov.br" style="font-family:sans,sans-serif; text-decoration:none; color:white;">Portal do Governo Brasileiro</a></li> 
+  <!-- Gov -->
+<div id="barra-brasil" style="background:#7F7F7F; height: 30px; padding:0 0 0 10px;"> 
+    <ul id="menu-barra-temp" style="list-style:none;">
+      <li style="display:inline; float:left;padding-right:10px; margin-right:10px; border-right:1px solid #EDEDED">
+        <a href="http://brasil.gov.br" style="font-family:sans,sans-serif; text-decoration:none; color:white;">Portal do Governo Brasileiro</a></li> 
         <li>
           <a style="font-family:sans,sans-serif; text-decoration:none; color:white;" href="http://epwg.governoeletronico.gov.br/barra/atualize.html">Atualize sua Barra de Governo</a></li>
-      </ul>
-    </div> -->
-<!-- ./Gov -->    
+        </ul>
+      </div>
+      <!-- ./Gov -->    
 
 <!-- Navigation -->
 
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-default navbar-expand-lg navbar-dark bg-dark">
 
       <div class="container">
         <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
