--- a/about.html
+++ b/about.html
@@ -25,9 +25,19 @@
   </head>
 
   <body>
+  <!-- Gov -->
+  <div id="barra-brasil" style="background:#7F7F7F; height: 30px; padding:0 0 0 10px;"> 
+    <ul id="menu-barra-temp" style="list-style:none;">
+      <li style="display:inline; float:left;padding-right:10px; margin-right:10px; border-right:1px solid #EDEDED">
+        <a href="http://brasil.gov.br" style="font-family:sans,sans-serif; text-decoration:none; color:white;">Portal do Governo Brasileiro</a></li> 
+        <li>
+          <a style="font-family:sans,sans-serif; text-decoration:none; color:white;" href="http://epwg.governoeletronico.gov.br/barra/atualize.html">Atualize sua Barra de Governo</a></li>
+        </ul>
+      </div>
+  <!-- ./Gov -->
 
   <!-- Navigation -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-default navbar-expand-lg navbar-dark bg-dark">
 
       <div class="container">
         <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
@@ -227,6 +237,11 @@
         <p class="m-0 text-center text-black">Copyright &copy; TerraMA² 2017</p>
       </div>
     </footer>
+    <!-- ./Footer -->
+
+    <!-- Barra do Gov -->
+    <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
+    <!-- ./Barra do Gov -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
