--- a/new-one.html
+++ b/new-one.html
@@ -35,15 +35,15 @@
   <body>
 
   <!-- Gov -->
-<div id="barra-brasil" style="background:#7F7F7F; height: 30px; padding:0 0 0 10px;"> 
+  <div id="barra-brasil" style="background:#7F7F7F; height: 30px; padding:0 0 0 10px;"> 
     <ul id="menu-barra-temp" style="list-style:none;">
       <li style="display:inline; float:left;padding-right:10px; margin-right:10px; border-right:1px solid #EDEDED">
         <a href="http://brasil.gov.br" style="font-family:sans,sans-serif; text-decoration:none; color:white;">Portal do Governo Brasileiro</a></li> 
-        <li>
-          <a style="font-family:sans,sans-serif; text-decoration:none; color:white;" href="http://epwg.governoeletronico.gov.br/barra/atualize.html">Atualize sua Barra de Governo</a></li>
-        </ul>
-      </div>
-      <!-- ./Gov -->    
+      <li>
+        <a style="font-family:sans,sans-serif; text-decoration:none; color:white;" href="http://epwg.governoeletronico.gov.br/barra/atualize.html">Atualize sua Barra de Governo</a></li>
+      </ul>
+  </div>
+  <!-- ./Gov -->    
 
 <!-- Navigation -->
 
@@ -235,11 +235,14 @@
       <!-- /.container -->
     </footer>
 
+    <!-- Barra do Gov -->
+    <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
+    <!-- ./Barra do Gov -->
+
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/popper/popper.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
   </body>
-
 </html>
