adding new files

--- a/documentation.html
+++ b/documentation.html
@@ -173,24 +173,24 @@
           </div>
           <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
             <div class="card-body">
-              <a href="">terrama2_logo_100dpi.png</a><br> 
-              <a href="">terrama2_logo_300dpi.png</a><br>
-              <a href="">terrama2_logo_500dpi.png</a><br>
-              <a href="">powerbyterrama2_logo0.png</a><br>
-              <a href="">powerbyterrama2_logo1.png</a><br>
-              <a href="">powerbyterrama2_logo2.png</a><br>
-              <a href="">powerbyterrama2_logo3.png</a><br>
-              <a href="">powerbyterrama2_logo4.png</a><br>
-              <a href="">powerbyterrama2_logo5.png</a><br>
-              <a href="">terrama2_logoexport_100dpi.png</a><br>
-              <a href="">terrama2_logoexport_300dpi.png</a><br>
-              <a href="">terrama2_logoexport_500dpi.png</a><br>
-              <a href="">terrama2_logoexeng_100dpi.png</a><br>
-              <a href="">terrama2_logoexeng_300dpi.png</a><br>
-              <a href="">terrama2_logoexeng_500dpi.png</a><br>
-              <a href="">terrama2_logoexspan_100dpi.png</a><br>
-              <a href="">terrama2_logoexspan_300dpi.png</a><br>
-              <a href="">terrama2_logoexspan_500dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logo_100dpi.png" target="_blank">terrama2_logo_100dpi.png</a><br> 
+              <a href="docs/logomarcas/terrama2_logo_300dpi.png" target="_blank">terrama2_logo_300dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logo_500dpi.png" target="_blank">terrama2_logo_500dpi.png</a><br>
+              <a href="docs/logomarcas/powerbyterrama2_logo0.png" target="_blank">powerbyterrama2_logo0.png</a><br>
+              <a href="docs/logomarcas/powerbyterrama2_logo1.png" target="_blank">powerbyterrama2_logo1.png</a><br>
+              <a href="docs/logomarcas/powerbyterrama2_logo2.png" target="_blank">powerbyterrama2_logo2.png</a><br>
+              <a href="docs/logomarcas/powerbyterrama2_logo3.png" target="_blank">powerbyterrama2_logo3.png</a><br>
+              <a href="docs/logomarcas/powerbyterrama2_logo4.png" target="_blank">powerbyterrama2_logo4.png</a><br>
+              <a href="docs/logomarcas/powerbyterrama2_logo5.png" target="_blank">powerbyterrama2_logo5.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexeng_100dpi.png" target="_blank">terrama2_logoexport_100dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexeng_300dpi.png" target="_blank">terrama2_logoexport_300dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexeng_500dpi.png" target="_blank">terrama2_logoexport_500dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexport_100dpi.png" target="_blank">terrama2_logoexeng_100dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexport_300dpi.png" target="_blank">terrama2_logoexeng_300dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexport_500dpi.png" target="_blank">terrama2_logoexeng_500dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexspan_100dpi.png" target="_blank">terrama2_logoexspan_100dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexspan_300dpi.png" target="_blank">terrama2_logoexspan_300dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexspan_500dpi.png" target="_blank">terrama2_logoexspan_500dpi.png</a><br>
             </div>
           </div>
         </div>
