--- a/download.html
+++ b/download.html
@@ -173,15 +173,15 @@
 
       <ul>
         <li>
-          <a href="">Instalador do TerraMA² - Release 4.0 - RC1 -  terrama2-4.0.0-rc1-linux-x64-ubuntu-16.04.deb</a>
+          <a href="docs/terrama2-4.0.0-rc1-linux-x64-ubuntu-16.04.deb">Instalador do TerraMA² - Release 4.0 - RC1 -  terrama2-4.0.0-rc1-linux-x64-ubuntu-16.04.deb</a>
         </li>
       </ul>
 
       <p><b>Dependências</b></p>
 
       <ul>
-        <li>Instalador do TerraLib + TerraView 5.2.1</li>
-        <li>Vmine terrama2-vmime_0.9.2-ubuntu16.04_amd64.deb</li>
+        <li><a href="http://www.dpi.inpe.br/terralib5/wiki/doku.php?id=wiki:downloads" target="_blank">Instalador do TerraLib + TerraView 5.2.1</a></li>
+        <li><a href="docs/terrama2-vmime_0.9.2-ubuntu16.04_amd64.deb">Vmine terrama2-vmime_0.9.2-ubuntu16.04_amd64.deb</a></li>
       </ul>
 
       <p><strong>IMPORTANTE :</strong> Os testes foram realizados com as versões dos arquivos abaixo. Versões mais recentes poderão estar disponíveis nos respectivos sites, entretanto não garantimos sua utilização:</p>
@@ -190,7 +190,7 @@
         <li>Servidor de Banco de Dados (PostgreSQL 9.5 + PostGIS 2.2)</li>
         <li>Java 8</li>
         <li>Apache Java Tomcat 8</li>
-        <li>Servidor de Mapas Geoserver 2.10.3 utilize “Web Archive”</li>
+        <li>Servidor de Mapas <a href="http://geoserver.org/release/maintain/" target="_blank">Geoserver 2.10.3 utilize “Web Archive”</a></li>
         <li>nodejs 4.x</li>
       </ul>
 
