--- a/index.html
+++ b/index.html
@@ -317,13 +317,13 @@
 
 
             <!-- animation -->
-            <img src="images/NovoTerrama2.jpg" style="width:80%;cursor:zoom-in"
+            <img src="images/NovoTerrama2.jpg.png" style="width:80%;cursor:zoom-in"
                 onclick="document.getElementById('modal01').style.display='block'">
 
             <div id="modal01" class="w3-modal" onclick="this.style.display='none'">
               <span class="w3-button w3-hover-red w3-xlarge w3-display-bottomright">&times;</span>
               <div class="w3-modal-content w3-animate-zoom">
-                <img src="images/NovoTerrama2.jpg" style="width:100%">
+                <img src="images/NovoTerrama2.jpg.png" style="width:100%">
               </div>
             </div>
             <!-- ./animation -->
