--- a/about.html
+++ b/about.html
@@ -71,10 +71,10 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Download</a>
+              <a class="nav-link" href="download.html">Download</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Documentação</a>
+              <a class="nav-link" href="documentation.html">Documentação</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" title="Em Breve!">Cursos</a>
