--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
         <!-- image -->
         <div class="col-lg-6">
-          <!-- <img class="img-fluid rounded" src="images/NovoTerrama2.jpg" alt="Sistema TerraMA²"> -->
+          <img class="img-fluid rounded" src="images/NovoTerrama2.jpg" alt="Sistema TerraMA²">
                 
           <!-- Trigger the modal with a button -->
           <!-- <button type="button" class="btn" data-toggle="modal" data-target="#myModal"><img class="img-fluid rounded" src="images/NovoTerrama2.jpg" alt="Sistema TerraMA²"></button> -->
@@ -317,7 +317,7 @@
 
 
             <!-- animation -->
-            <img src="images/NovoTerrama2.jpg.png" style="width:80%;cursor:zoom-in"
+            <!-- <img src="images/NovoTerrama2.jpg.png" style="width:90%;cursor:zoom-in"
                 onclick="document.getElementById('modal01').style.display='block'">
 
             <div id="modal01" class="w3-modal" onclick="this.style.display='none'">
@@ -325,7 +325,7 @@
               <div class="w3-modal-content w3-animate-zoom">
                 <img src="images/NovoTerrama2.jpg.png" style="width:100%">
               </div>
-            </div>
+            </div> -->
             <!-- ./animation -->
 
         </div>
