modified navbar to sticky-top

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <!-- Navigation -->
 
-    <nav class="navbar navbar-default navbar-expand-lg navbar-dark bg-dark">  
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">  
       <div class="container">   
         <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
 
@@ -328,7 +328,7 @@
             </div> -->
             <!-- ./animation -->
 
-        </div>
+          </div>
 
       </div>
       
@@ -466,6 +466,10 @@
         <p class="m-0 text-center text-black">Copyright &copy; TerraMA² 2017</p>
       </div>
     </footer>
+
+
+
+
   <!-- /.Footer -->
 
   <!-- Barra do Gov -->
