--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
   <!-- ./Gov -->
 
   <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
 
       <div class="container">
         <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
