adding new page 'new'

--- a/documentation.html
+++ b/documentation.html
@@ -132,9 +132,8 @@
       </ol>
 
       <h4>Documentos do Usuário</h4>
-      <p><a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:manuais:manual_instalacao_terrama2_rc1.pdf">Manual de Instalação do TerraMA²</a><br>
-        <a href="">Manual de Usuário </a><br>
-        <a href="">Apresentação do Sistema</a>
+      <p><a href="docs/download/manual_instalacao_terrama2_rc1.pdf" target="_blank">Manual de Instalação do TerraMA²</a><br>
+         <a href="docs/documentacao/02_introducao_terrama2.pdf" target="_blank">Apresentação do Sistema</a>
       </p>
 
       <hr>
