--- a/download.html
+++ b/download.html
@@ -133,12 +133,14 @@
 
       <h4>Download TerraMA² - Release 4 - Release Candidate 1</h4><br>
       
-      <h5>Escolha sua opção abaixo: <a href="docs/download/manual_instalacao_terrama2_rc1.pdf">Manual de Instalação</a></h5>
-      
-      <p><b><a href="#um">1</a></b> - Instalação Windows (em desenvolvimento)</p>
-      <p><b><a href="#dois">2</a></b> - Instalação Linux Ubuntu </p>
-      <p><b><a href="#tres">3</a></b> - Roteiro para iniciantes</p>
-      <p><b><a href="#quatro">4</a></b> - Código fonte para compilar</p><br>
+      <h5>Escolha sua opção abaixo: <a href="docs/download/manual_instalacao_terrama2_rc1.pdf">Manual de Instalação</a></h5><br>
+      <ul>
+        <p><b><a href="#um">1</a></b> - Instalação Windows (em desenvolvimento)</p>
+        <p><b><a href="#dois">2</a></b> - Instalação Linux Ubuntu </p>
+        <p><b><a href="#tres">3</a></b> - Roteiro para iniciantes</p>
+        <p><b><a href="#quatro">4</a></b> - Código fonte para compilar</p>
+      </ul>
+      <br>
 
       <p><strong>DICA IMPORTANTE :</strong> Solicitamos que faça inscrição em nossa <a href="http://listas.dpi.inpe.br/mailman/listinfo/terrama2-l">lista de discussão</a>. Esta será o meio oficial de contato, relato de problemas, dúvidas e avisos em geral.</p>
       <p><a href="#historic">Histórico de Versões</a></p>
