adding new page 'projects'

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 Projetos
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownAbout">
+                <a class="dropdown-item" href="projects.html">Projetos</a>
                 <a class="dropdown-item" href="portfolio-1-col.html">Estudos de Casos</a>
               </div>
             </li>
