--- a/download.html
+++ b/download.html
@@ -202,7 +202,7 @@
       <h5 id="tres">3 - Roteiro para iniciantes</h5>
 
       <ul>
-        <li>Roteiro passo a passo -</li>
+        <li>Roteiro passo a passo</li>
         <li>Dados (geográficos e hidrometeorológicos) para roteiro</li>
         <b>NOTA:</b> Este roteiro foi preparado para versão Linux (Ubuntu 16.04).
       </ul>
