--- a/architecture.html
+++ b/architecture.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-  <head>
+<head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,17 +20,7 @@
     <!-- Custom styles for this template -->
     <link href="css/modern-business.css" rel="stylesheet">
     
-    <style type="text/css">
-      p{
-        text-align: justify;
-      }
-      img {
-        display: block;
-        margin: 0 auto;
-      }
-    </style>
-
-  </head>
+</head>
 
   <body>
   <!-- Gov -->
@@ -51,7 +41,7 @@
         <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
 
         <!-- Logo -->
-        <a href="index.html" title="Home"><img src="images/logo-terraMa2.png" width="60" height="50"></a>
+        <a href="index.html" title="Home"><img src="images/logo-terraMa2.png" width="60" height="50" alt="logo terraMa²"></a>
         
         <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -152,16 +142,16 @@
           <!-- <img class="img-fluid rounded" src="images/modelo_terrama2_v4_portugues.png"> -->
 
           <!-- animation -->
-            <img src="images/modelo_terrama2_v4_portugues.png" style="width:75%;cursor:zoom-in"
+            <img src="images/modelo_terrama2_v4_portugues.png" alt="modelo terraMa²" style="width:75%;cursor:zoom-in"
                 onclick="document.getElementById('modal01').style.display='block'">
 
             <div id="modal01" class="w3-modal" onclick="this.style.display='none'">
               <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
               <div class="w3-modal-content w3-animate-zoom">
-                <img src="images/modelo_terrama2_v4_portugues.png" style="width:100%">
+                <img src="images/modelo_terrama2_v4_portugues.png" alt="modelo terraMa²" style="width:100%">
               </div>
             </div>
-            <!-- ./animation -->
+          <!-- ./animation -->
         </div>
 
         <div class="col-lg-12">
@@ -187,76 +177,6 @@
       </div>
       <!-- /.row -->
 
-      <!-- Team Members -->
-     <!--  <h2>Our Team</h2>
-
-      <div class="row">
-        <div class="col-lg-4 mb-4">
-          <div class="card h-100 text-center">
-            <img class="card-img-top" src="http://placehold.it/750x450" alt="">
-            <div class="card-body">
-              <h4 class="card-title">Team Member</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#">name@example.com</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 mb-4">
-          <div class="card h-100 text-center">
-            <img class="card-img-top" src="http://placehold.it/750x450" alt="">
-            <div class="card-body">
-              <h4 class="card-title">Team Member</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#">name@example.com</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 mb-4">
-          <div class="card h-100 text-center">
-            <img class="card-img-top" src="http://placehold.it/750x450" alt="">
-            <div class="card-body">
-              <h4 class="card-title">Team Member</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#">name@example.com</a>
-            </div>
-          </div>
-        </div>
-      </div> -->
-      <!-- /.row -->
-
-      <!-- Our Customers -->
-      <!-- <h2>Our Customers</h2>
-      <div class="row">
-        <div class="col-lg-2 col-sm-4 mb-4">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-        </div>
-        <div class="col-lg-2 col-sm-4 mb-4">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-        </div>
-        <div class="col-lg-2 col-sm-4 mb-4">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-        </div>
-        <div class="col-lg-2 col-sm-4 mb-4">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-        </div>
-        <div class="col-lg-2 col-sm-4 mb-4">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-        </div>
-        <div class="col-lg-2 col-sm-4 mb-4">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-        </div>
-      </div> -->
-      <!-- /.row -->
-
     </div>
     <!-- /.container -->
 
@@ -278,5 +198,4 @@
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
   </body>
-
 </html>
