--- a/new-one.html
+++ b/new-one.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
   <head>
 
@@ -13,22 +13,11 @@
   <link href="images/logo-terraMa2.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-  <!-- Bootstrap core CSS ====================================== -->
+  <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom styles for this template ========================= -->
+  <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
-
-  <style>
-    p{
-      text-align: justify;
-    }
-    img.displayed{
-      display: block;
-      margin-left: auto;
-      margin-right: auto
-    }
-  </style>
 
 </head>
 
@@ -53,7 +42,7 @@
         <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
 
         <!-- Logo -->
-        <a href="index.html" title="Home"><img src="images/logo-terraMa2.png" width="60" height="50"></a>
+        <a href="index.html" title="Home"><img src="images/logo-terraMa2.png" width="60" height="50" alt="logo terraMa²"></a>
         
         <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
