--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-  <head>
+<head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,15 +16,10 @@
 
     <!-- Custom styles for this template -->
     <link href="css/modern-business.css" rel="stylesheet">
-    <style type="text/css">
-      p{
-        text-align: justify;
-      }
-    </style>
+  
+</head>
 
-  </head>
-
-  <body>
+<body>
   <!-- Gov -->
   <div id="barra-brasil" style="background:#7F7F7F; height: 30px; padding:0 0 0 10px;"> 
     <ul id="menu-barra-temp" style="list-style:none;">
@@ -38,12 +33,11 @@
 
   <!-- Navigation -->
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-
       <div class="container">
         <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
 
         <!-- Logo -->
-        <a href="index.html" title="Home"><img src="images/logo-terraMa2.png" width="60" height="50"></a>
+        <a href="index.html" title="Home"><img src="images/logo-terraMa2.png" width="60" height="50" alt="logo terraMa²"></a>
         
         <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -149,7 +143,7 @@
           <p>Estas aplicações necessitam de plataformas que possam integrar serviços geográficos e modelagem, com base de acesso em tempo-real a dados geo-ambientais (meterológicos, climáticos, atmosféricos, hidrológicos, geotécnicos, socio-demográficos, etc.) disponíveis em qualquer servidor conectado a internet, e que podem ser lidos, processados e aplicados a diversos usos. Portanto, a plataforma TerraMA² é um sistema computacional, baseado em uma arquitetura de serviços, aberta, que provê a infra-estrutura tecnológica necessária ao desenvolvimento de sistemas operacionais para monitoramento de alertas de riscos ambientais.</p>
         </div>
 
-        <div>
+        <div class="col-lg-12">
           <h3>Quem opera a plataforma?</h3>
 
           <p>A TerraMA² provê serviços para busca de dados atuais através da internet e sua incorporação à base de dados do sistema de alerta; serviços para tratar/analisar em tempo real dados novos e verificar se uma situação de risco existe, através de uma comparação com mapas de risco ou de um modelo definido; serviços para executar/editar/criar novos modelos de risco e alerta; serviços para criação e notificação de alerta para os usuários do sistema em operação entre outros serviços básicos e avançados.</p>
@@ -240,9 +234,9 @@
     </footer>
     <!-- ./Footer -->
 
-    <!-- Barra do Gov -->
+    <!-- Gov -->
     <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
-    <!-- ./Barra do Gov -->
+    <!-- ./Gov -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
