--- a/documentation.html
+++ b/documentation.html
@@ -17,13 +17,6 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 
-  <style>
-   img {
-    display: block;
-    margin: 0 auto;
-  }
-</style>
-
 </head>
 
 <body>
@@ -39,14 +32,13 @@
   <!-- ./Gov -->
 
   <!-- Navigation -->
-
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
 
     <div class="container">
       <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
 
       <!-- Logo -->
-      <a href="index.html" title="Home"><img src="images/logo-terraMa2.png" width="60" height="50"></a>
+      <a href="index.html" title="Home"><img src="images/logo-terraMa2.png" width="60" height="50" alt="logo terraMa²"></a>
 
       <!--   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -118,10 +110,9 @@
               </div>
             </li> -->
           </ul>
-        </div>
+        </div>  
       </div>
     </nav>
-
     <!-- ./Navigation -->
 
     <!-- Page Content -->
@@ -146,7 +137,7 @@
 
       <!-- <hr> -->
 
-      <table class="table table-hover table-light">
+      <table class="table table-hover table-inverse">
         <thead>
           <tr>
             <!-- <th>#</th> -->
@@ -218,9 +209,8 @@
           </tr>
         </tbody>
       </table><br>
-      
 
-      <!-- collapse -->
+     <!-- collapse -->
       <div class="mb-4" id="accordion" role="tablist" aria-multiselectable="true">
 
         <div class="card">
