update design to websitw

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
   <!-- Navigation -->
 
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-light">
     <div class="container">
       <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
 
@@ -200,7 +200,7 @@
     <!-- /.container -->
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 bg-light">
       <div class="container">
         <p class="m-0 text-center text-black">Copyright &copy; TerraMA² 2017</p>
       </div>
