--- a/documentation.html
+++ b/documentation.html
@@ -32,7 +32,7 @@
   <!-- ./Gov -->
 
   <!-- Navigation -->
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-light">
 
     <div class="container">
       <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
@@ -131,13 +131,17 @@
       </ol>
 
       <h4>Documentos do Usuário</h4>
-      <p><a href="docs/download/manual_instalacao_terrama2_rc1.pdf" target="_blank">Manual de Instalação do TerraMA²</a><br>
+      <div class="bs-callout bs-callout-warning">
+        
+        <p><a href="docs/download/manual_instalacao_terrama2_rc1.pdf" target="_blank">Manual de Instalação do TerraMA²</a><br>
          <a href="docs/documentacao/02_introducao_terrama2.pdf" target="_blank">Apresentação do Sistema</a>
-      </p>
+       </p>
+
+     </div>
 
       <!-- <hr> -->
 
-      <table class="table table-hover table-inverse">
+      <table class="table table-hover table-inverse"> <!-- table-inverse -->
         <thead>
           <tr>
             <!-- <th>#</th> -->
@@ -216,7 +220,7 @@
         <div class="card">
           <div class="card-header" role="tab" id="headingTwo">
             <h5 class="mb-0">
-              <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Logomarcas TerraMA2
+              <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Logomarcas TerraMA²
               </a>
             </h5>
           </div>
@@ -250,7 +254,7 @@
     <!-- /.container -->
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 bg-light">
       <div class="container">
         <p class="m-0 text-center text-black">Copyright &copy; TerraMA² 2017</p>
       </div>
