--- a/new-two.html
+++ b/new-two.html
@@ -13,22 +13,11 @@
   <link href="images/logo-terraMa2.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-  <!-- Bootstrap core CSS ====================================== -->
+  <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom styles for this template ========================= -->
+  <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
-
-  <style>
-    p{
-      text-align: justify;
-    }
-    img.displayed{
-      display: block;
-      margin-left: auto;
-      margin-right: auto
-    }
-  </style>
 
 </head>
 
@@ -47,7 +36,7 @@
 
 <!-- Navigation -->
 
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-light">
 
       <div class="container">
         <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
@@ -196,7 +185,7 @@
     <!-- /.container -->
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 bg-light">
       <div class="container">
         <p class="m-0 text-center text-black" >Copyright &copy; TerraMA² 2017</p>
       </div>
