--- a/new-one.html
+++ b/new-one.html
@@ -36,7 +36,7 @@
 
 <!-- Navigation -->
 
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-light">
 
       <div class="container">
         <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
@@ -218,7 +218,7 @@
     </div><br><br>
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 bg-light">
       <div class="container">
         <p class="m-0 text-center text-black" >Copyright &copy; TerraMA² 2017</p>
       </div>
